# cmaze

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
cmake/: ClangDeps.cmake
src/: main.cc
